--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" font>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,59 +8,97 @@
     <title>Elden Ring FanPage</title>
     <link rel="stylesheet" href="css/harry.css">
 </head>
-   
+
 <body>
     <img src="images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-   <header>
-    <nav>
-        <ol class="navBar">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pages/items.html">Items</a> 
-                <ul class="navBar">
-                    <li> <a href="pages/items.html#armas">Armas</a></li>
-                    <li> <a href="pages/items.html#armors">Armaduras y Sets</a></li>
-                    <li> <a href="pages/items.html#arcos">Arcos</a></li>
-                    <li> <a href="pages/items.html#armases">Armas especiales</a></li>
-                </ul>
-            </li>
-            <li><a href="pages/lore.html">Lore(Historia)</a></li>
-            <li><a href="pages/fotos.html">Fotos</a></li>
-            <li><a href="pages/contacto.html">Contácto</a></li>
-        </ol>
-    </nav>
-       <img src="" alt="">
-   </header>
-   <img src="" alt="">
-  <h1 class="textoDorado textoGrande textoClasico">Elden Ring intento de Wiki</h1> 
-  <p class = "textoSilver textoGrande textoClasico" >El mundo de Elden Ring está habitado por una serie de seres bendecidos por los semidioses. Aunque este don puede llegar a perderse como ocurre con el personaje que manejará el jugador. Bajo el apodo de Sinluz, tratará de derrocar a los dioses que han despojado de todo a los suyos y coronarse como el nuevo rey de las Tierras Intermedias.</p>
-    <div class="divModel2">
-        
-        <div class="divModel divModel3">
-            <h2 class="textoDorado">Sumergite en el mundo de las Tierras Intermedias</h2> 
-            <img src="images/tierras.jpeg" alt="">
+    <div class="padre">
+        <header class="navegacion">
+            <!-- BARRA DE NAVEGACION -->
+            <nav>
+                <ol class="navBar">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/items.html">Items</a>
+                        <ul class="navBar">
+                            <li> <a href="pages/items.html#armas">Armas</a></li>
+                            <li> <a href="pages/items.html#armors">Armaduras y Sets</a></li>
+                            <li> <a href="pages/items.html#arcos">Arcos</a></li>
+                            <li> <a href="pages/items.html#armases">Armas especiales</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="pages/lore.html">Lore(Historia)</a></li>
+                    <li><a href="pages/fotos.html">Fotos</a></li>
+                    <li><a href="pages/contacto.html">Contácto</a></li>
+                </ol>
+            </nav>
+        </header>
+        <!-- ENCABEZADO -->
+        <div class="encabezado">
+            <h1 class="textoDorado textoGrande textoClasico">Elden Ring intento de Wiki</h1>
+        </div>
+        <!-- PARRAFO -->
+        <div class="parrafo1">
+            <p class="textoSilver textoGrande textoClasico">El mundo de Elden Ring está habitado por una serie de seres
+                bendecidos por los semidioses. Aunque este don puede llegar a perderse como ocurre con el personaje que
+                manejará
+                el jugador. Bajo el apodo de Sinluz, tratará de derrocar a los dioses que han despojado de todo a los
+                suyos
+                y
+                coronarse como el nuevo rey de las Tierras Intermedias.</p>
+        </div>
+
+        <!--TEXTO IMAGEN1 -->
+        <div class="divModel seccion1">
             <div>
-                <p class="textoSilver textoSilver--align">Recorré el extenso mundo creado por Hidetaka Miyazaki y George R R Martin y enfrentate a las mazmorras y laberintos escondidos por todo el mapa al lado de tu corcel Torrente </p>
+                <h2 class="textoDorado textoDorado--align">Sumergite en el mundo de las Tierras Intermedias</h2>
+            </div>
+            <div class="divModelImg">
+                <img src="images/tierras.jpeg" alt="">
+            </div>
+            <div>
+                <p class="textoSilver textoSilver--align">Recorré el extenso mundo creado por Hidetaka Miyazaki y
+                    George
+                    R R Martin y enfrentate a las mazmorras y laberintos escondidos por todo el mapa al lado de tu
+                    corcel Torrente </p>
             </div>
         </div>
-        <div class="divModel divModel3">
-        <h2 class="textoDorado">Reunete con tus NPCs aliados en el Hub Central (Roundtable Hold)</h2>
+        <!--TEXTO IMAGEN2 -->
+        <div class="divModel seccion2">
+            <div>
+                <h2 class="textoDorado textoDorado--align">Reunete con tus NPCs aliados en el Hub Central (Roundtable Hold)</h2>
+            </div>
             <div class="divModelImg">
-            <img src="images/hub.jpeg" alt="">
-            </div>  
-            <p class="textoSilver textoSilver--align">Llegado el momento vas a poder reunirte junto a todos los NPCs que te hayas encontrado en el Roundtable Hold para poder interactuar con ellos y completar sus misiones!</p>
+                <img src="images/hub.jpeg" alt="">
+            </div>
+            <div>
+                <p class="textoSilver textoSilver--align">Llegado el momento vas a poder reunirte junto a todos los
+                    NPCs
+                    que
+                    te hayas encontrado en el Roundtable Hold para poder interactuar con ellos y completar sus
+                    misiones!
+                </p>
+            </div>
+        </div>
+
+        <!-- VIDEO -->
+        <div class="textoDorado textoClasico videoPrincipal">
+            <div>
+                <h2>Video</h2>
+            </div>
+            <div>
+                <p class="video__parrafo textoDorado">Video trailer oficial</p>
+            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CptaXqVY6-E"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div class="pie">
+            <footer class="footer textoDorado">
+                <h4>Todos los derechos reservados</h4>
+                Mariano
+            </footer>
         </div>
     </div>
-    <div class="textoDorado textoClasico"> 
-        <h2>Videos</h2>
-        <p class="video__parrafo textoDorado">Video trailer oficial</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/CptaXqVY6-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <!-- <button class="videoBoton videoBoton--fondoVerde">boton 1</button> <button class="videoBoton videoBoton--fondoAzul">boton 2</button> -->
-    </div>
-    <div class="divModelFooter">
-        <footer class="footer textoDorado">
-            <h4>Todos los derechos reservados</h4>
-                        Mariano
-        </footer>
-    </div>
 </body>
+
 </html>
