--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,29 +34,29 @@
         </div>
         <div class="formulario divModel">
             <form action="">
-                <fieldset>
+                <fieldset class="field1">
                     <div>
                         <legend class="textoDorado">Formulatio de Contacto</legend>
                     </div>
-                    <div>
+                    <div class="divModelForm">
                         <label class="textoSilverContacto" for="nombre">Nombre</label>
                     </div>
                     <div>
                         <input type="text" name="nombre">
                     </div>
-                    <div>
+                    <div class="divModelForm">
                         <label class="textoSilverContacto" for="telefono">Teléfono</label>
                     </div>
                     <div>
                         <input type="number" name="telefono">
                     </div>
-                    <div>
+                    <div class="divModelForm">
                         <label class="textoSilverContacto" for="email">Email</label>
                     </div>
                     <div>
                         <input type="email" name="email">
                     </div>
-                    <div>
+                    <div class="divModelForm">
                         <label class="textoSilverContacto" for="">Cuando quieres ser contactado?</label>
                     </div>
                     <div>
@@ -65,13 +65,13 @@
                     <div>
                         <input class="textoSilverContacto" type="checkbox" value="t" name="tarde">Tarde
                     </div>
-                    <div>
+                    <div class="divModelForm">
                         <label class="textoSilverContacto" for="">Sexo</label>
                     </div>
                     <input class="textoSilverContacto" type="radio" name="sexo"> Masculino
                     <input class="textoSilverContacto" type="radio" name="sexo"> Femenino
                     <input class="textoSilverContacto" type="radio" name="sexo"> Otro
-                    <div class="divModel2">
+                    <div class="divModelForm">
                         <label class="textoSilverContacto" for="socio">Socio</label>
                     </div>
                     <div>
@@ -80,7 +80,7 @@
                             <option value="n">No</option>
                         </select>
                     </div>
-                    <div>
+                    <div class="divModelForm">
                         <textarea name="mensaje" placeholder="Deje su mensaje aquí"></textarea>
                     </div>
                     <input type="submit" value="Enviar">
