--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -28,7 +28,7 @@
         </nav>
    </header>
 
-   <h1 class="textoClasico textoDorado textoGrande">FOTOS</h1>
+   <h1 class="textoClasico textoDorado textoGrande textoFotos">FOTOS</h1>
         <img src="" alt="">
         <div>
             <h2 class="textoDorado textoClasico">Bosses</h2>
