Cambios en Fotos, se agregó Grid y se intentó poner animaciones

--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -1,56 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring FanPage Fotos</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/harry.css">
 </head>
+
 <body>
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <header>
-        <nav>
-            <ol class="navBar">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="items.html">Items</a> 
-                    <ul class="navBar">
-                        <li> <a href="items.html#armas">Armas</a></li>
-                        <li> <a href="items.html#armors">Armaduras y Sets</a></li>
-                        <li> <a href="items.html#arcos">Arcos</a></li>
-                        <li> <a href="items.html#armases">Armas especiales</a></li>
-                    </ul>
-                </li>
-                <li><a href="lore.html">Lore(Historia)</a></li>
-                <li><a href="fotos.html">Fotos</a></li>
-                <li><a href="contacto.html">Contácto</a></li>
-            </ol>
-        </nav>
-   </header>
+    <div class="padreFotos">
+        <header class="navegacion">
+            <nav>
+                <ol class="navBar">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="items.html">Items</a>
+                        <ul class="navBar">
+                            <li> <a href="items.html#armas">Armas</a></li>
+                            <li> <a href="items.html#armors">Armaduras y Sets</a></li>
+                            <li> <a href="items.html#arcos">Arcos</a></li>
+                            <li> <a href="items.html#armases">Armas especiales</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="lore.html">Lore(Historia)</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="contacto.html">Contácto</a></li>
+                </ol>
+            </nav>
+        </header>
+        <div class="encabezadoF1">
+            <h1 class="textoClasico textoDorado textoGrande textoFotos animate__shakeX">FOTOS</h1>
+        </div>
+        <div class="encabezadoF2">
+            <h2 class="textoDorado textoClasico textoGrande">Bosses</h2>
+        </div>
+        <div class="pic1">
+            <div>
+                <h3 class="textoSilver textoGrande">RADHAN</h3>
+            </div>
+            <div>
+                <img src="../images/radahn1.jpg" alt="">
+            </div>
+        </div>
+        <aside class="txPic1">
+            <p class="textoSilver textoMediano textoCentradoCol">Starscourge Radahn is a Boss in Elden Ring.
+                Starscourge
+                Radahn is a massive and destructive demigod located in Caelid, where he can be accessed from Redmane
+                Castle after activating the Radahn Festival by progressing far enough in Ranni's questline, or
+                activating any site of grace in Altus Plateau. Defeating this Boss is mandatory for at least one
+                ending of the game and to complete certain NPC questlines. However he does not necessarily have to
+                be defeated to finish the game.</p>
+        </aside>
+        <div class="pic2">
+            <div>
+                <h3 class="textoSilver textoGrande">RYKARD, LORD OF BLASPHEMY</h3>
+            </div>
+            <div>
+                <img src="../images/rykard.jpg" alt="">
+            </div>
+        </div>
+        <aside class="txPic2">
+            <p class="textoSilver textoMediano">Rykard, Lord of Blasphemy is a Boss in Elden Ring.
+                Rykard, Lord of Blasphemy is the true form of the God-Devouring Serpent, whose body has been taken
+                over by Rykard, and is found in Mt. Gelmir. This is an optional boss as players don't need to defeat
+                it to advance in Elden Ring.
+                Rykard, Lord of Blasphemy is first fought in his First Phase as the God-Devouring Serpent. Unlike
+                most boss phases, the God-Devouring Serpent has its own health bar which must be depleted before you
+                can challenge the second phase. Note that dying to his second phase as Rykard will require you to
+                defeat the serpent once again.</p>
+        </aside>
+        <div class="encabezadoF3">
+            <h2 class="textoDorado textoClasico textoGrande animate__shakeY">NPCs</h2>
+        </div>
+        <div class="pic3">
+            <div>
+                <h3 class="textoSilver textoGrande">Sellen</h3>
+            </div>
+            <div>
+                <img src="../images/Sellen.jpg" alt="">
+            </div>
+        </div>
+        <aside class="txPic3">
+            <p class="textoSilver textoMediano">Sorceress Sellen is a Merchant and NPC in Elden Ring.
+                Sorceress Sellen can be found in Limgrave, inside Waypoint Ruins which is far east from Elden Ring's
+                starting point. You can learn Sorceries from her. This page covers vital information for Sorceress
+                Sellen's questline for Elden Ring. She also becomes available as an NPC Summon during specific boss
+                battles.</p>
+        </aside>
 
-   <h1 class="textoClasico textoDorado textoGrande textoFotos">FOTOS</h1>
-        <img src="" alt="">
-        <div>
-            <h2 class="textoDorado textoClasico">Bosses</h2>
-                <h3 class="textoSilver">Radahn</h3>
-                <img src="../images/Radahn.jpg" alt="">
-                <h3 class="textoSilver">Malenia</h3>
-                <img src="../images/malenia.jpg" alt="">
-            <h2 class="textoDorado textoClasico">NPCs</h2>
-                <h3 class="textoSilver">Merchant Kale</h3>
-                    <img src="../images/kale.jpg" alt="">
-                <h3 class="textoSilver">Sellen</h3>
-                    <img src="../images/Sellen.jpg" alt="">
-                <h3 class="textoSilver">Corhyn</h3>
-                    <img src="../images/Corhyn.jpg" alt="">
-            <h2 class="textoDorado textoClasico">Criaturas y Enemigos</h2>
-                <h3 class="textoSilver">Eagle</h3>
-                    <img src="../images/eagle.jpg" alt="">
-                <h3 class="textoSilver">Crab</h3>
-                    <img src="../images/crab.jpg" alt="">
+        <div class="pic4">
+            <div>
+                <h3 class="textoSilver textoGrande">Corhyn</h3>
+            </div>
+            <div>
+                <img src="../images/Corhyn.jpg" alt="">
+            </div>
+        </div>
+        <aside class="txPic4">
+            <p class="textoSilver textoMediano">Brother Corhyn is an NPC in Elden Ring. Brother Corhyn
+                is a holy practitioner who will teach you practical faith-based Incantations in exchange for Runes.
+                You will encounter him once you've reached the Roundtable Hold.</p>
+        </aside>
+        <div class="encabezadoF4">
+            <h2 class="textoDorado textoClasico textoGrande">Criaturas y Enemigos</h2>
+        </div>
+        <div class="pic5">
+            <div>
+                <h3 class="textoSilver textoGrande">Eagle</h3>
+            </div>
+            <div>
+                <img src="../images/eagle.jpg" alt="">
+            </div>
+        </div>
+        <aside class="txPic5">
+            <p class="textoSilver textoMediano">Majestic Eagles can be spotted among the cliffs, even
+                during these times.</p>
+        </aside>
+        <div class="pic6">
+            <div>
+                <h3 class="textoSilver textoGrande">Crab</h3>
+            </div>
+            <div>
+                <img src="../images/crab.jpg" alt="">
+            </div>
+        </div>
+        <aside class="txPic6">
+            <p class="textoSilver textoMediano">Giant Crabs crowd the shores and shallows, attacking any
+                who approach by swinging their powerful claws and spewing forth high-pressure water.</p>
+        </aside>
+
+        <footer class="footer textoDorado pie">
+            <h4>Todos los derechos reservados</h4>
+            Mariano
+        </footer>
     </div>
-    <footer class="footer textoDorado">
-        <h4>Todos los derechos reservados</h4>
-          Mariano
-    </footer>    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
+</html>
