pude agregar las animaciones

--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring FanPage Fotos</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/harry.css">
 </head>
 
@@ -36,17 +36,17 @@
             <h1 class="textoClasico textoDorado textoGrande textoFotos animate__shakeX">FOTOS</h1>
         </div>
         <div class="encabezadoF2">
-            <h2 class="textoDorado textoClasico textoGrande">Bosses</h2>
+            <h2 class="textoDorado textoClasico textoGrande animate__animated animate__backInDown">Bosses</h2>
         </div>
-        <div class="pic1">
+        <div data-aos="fade-left" data-aos-delay="500" class="pic1">
             <div>
                 <h3 class="textoSilver textoGrande">RADHAN</h3>
             </div>
             <div>
-                <img src="../images/radahn1.jpg" alt="">
+                <img class="imgFotos1" src="../images/radahn1.jpg" alt="">
             </div>
         </div>
-        <aside class="txPic1">
+        <aside data-aos="fade-right" data-aos-delay="500" class="txPic1">
             <p class="textoSilver textoMediano textoCentradoCol">Starscourge Radahn is a Boss in Elden Ring.
                 Starscourge
                 Radahn is a massive and destructive demigod located in Caelid, where he can be accessed from Redmane
@@ -55,15 +55,15 @@
                 ending of the game and to complete certain NPC questlines. However he does not necessarily have to
                 be defeated to finish the game.</p>
         </aside>
-        <div class="pic2">
+        <div data-aos="fade-up-right" data-aos-delay="500" class="pic2">
             <div>
                 <h3 class="textoSilver textoGrande">RYKARD, LORD OF BLASPHEMY</h3>
             </div>
             <div>
-                <img src="../images/rykard.jpg" alt="">
+                <img class="imgFotos1" src="../images/rykard.jpg" alt="">
             </div>
         </div>
-        <aside class="txPic2">
+        <aside data-aos="fade-up-left" data-aos-delay="500" class="txPic2">
             <p class="textoSilver textoMediano">Rykard, Lord of Blasphemy is a Boss in Elden Ring.
                 Rykard, Lord of Blasphemy is the true form of the God-Devouring Serpent, whose body has been taken
                 over by Rykard, and is found in Mt. Gelmir. This is an optional boss as players don't need to defeat
@@ -74,17 +74,17 @@
                 defeat the serpent once again.</p>
         </aside>
         <div class="encabezadoF3">
-            <h2 class="textoDorado textoClasico textoGrande animate__shakeY">NPCs</h2>
+            <h2 class="textoDorado textoClasico textoGrande">NPCs</h2>
         </div>
-        <div class="pic3">
+        <div data-aos="fade-up-left" class="pic3">
             <div>
                 <h3 class="textoSilver textoGrande">Sellen</h3>
             </div>
             <div>
-                <img src="../images/Sellen.jpg" alt="">
+                <img class="imgFotos1" src="../images/Sellen.jpg" alt="">
             </div>
         </div>
-        <aside class="txPic3">
+        <aside data-aos="fade-up-right" class="txPic3">
             <p class="textoSilver textoMediano">Sorceress Sellen is a Merchant and NPC in Elden Ring.
                 Sorceress Sellen can be found in Limgrave, inside Waypoint Ruins which is far east from Elden Ring's
                 starting point. You can learn Sorceries from her. This page covers vital information for Sorceress
@@ -92,15 +92,15 @@
                 battles.</p>
         </aside>
 
-        <div class="pic4">
+        <div data-aos="fade-up-right" class="pic4">
             <div>
-                <h3 class="textoSilver textoGrande">Corhyn</h3>
+                <h3 class="imgFotos1" class="textoSilver textoGrande">Corhyn</h3>
             </div>
             <div>
                 <img src="../images/Corhyn.jpg" alt="">
             </div>
         </div>
-        <aside class="txPic4">
+        <aside data-aos="fade-up-left" class="txPic4">
             <p class="textoSilver textoMediano">Brother Corhyn is an NPC in Elden Ring. Brother Corhyn
                 is a holy practitioner who will teach you practical faith-based Incantations in exchange for Runes.
                 You will encounter him once you've reached the Roundtable Hold.</p>
@@ -108,27 +108,27 @@
         <div class="encabezadoF4">
             <h2 class="textoDorado textoClasico textoGrande">Criaturas y Enemigos</h2>
         </div>
-        <div class="pic5">
+        <div data-aos="fade-up-left" class="pic5">
             <div>
                 <h3 class="textoSilver textoGrande">Eagle</h3>
             </div>
             <div>
-                <img src="../images/eagle.jpg" alt="">
+                <img class="imgFotos1" src="../images/eagle.jpg" alt="">
             </div>
         </div>
-        <aside class="txPic5">
+        <aside data-aos="fade-up-right" class="txPic5">
             <p class="textoSilver textoMediano">Majestic Eagles can be spotted among the cliffs, even
                 during these times.</p>
         </aside>
-        <div class="pic6">
+        <div data-aos="fade-up-right" class="pic6">
             <div>
                 <h3 class="textoSilver textoGrande">Crab</h3>
             </div>
             <div>
-                <img src="../images/crab.jpg" alt="">
+                <img class="imgFotos1" src="../images/crab.jpg" alt="">
             </div>
         </div>
-        <aside class="txPic6">
+        <aside data-aos="fade-up-left" class="txPic6">
             <p class="textoSilver textoMediano">Giant Crabs crowd the shores and shallows, attacking any
                 who approach by swinging their powerful claws and spewing forth high-pressure water.</p>
         </aside>
@@ -139,5 +139,8 @@
         </footer>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();
+    </script>
 </body>
+
 </html>
