--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -94,10 +94,10 @@
 
         <div data-aos="fade-up-right" class="pic4">
             <div>
-                <h3 class="imgFotos1" class="textoSilver textoGrande">Corhyn</h3>
+                <h3 class="textoSilver textoGrande">Corhyn</h3>
             </div>
             <div>
-                <img src="../images/Corhyn.jpg" alt="">
+                <img class="imgFotos1"  src="../images/Corhyn.jpg" alt="">
             </div>
         </div>
         <aside data-aos="fade-up-left" class="txPic4">
